<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/bone"
    android:padding="@dimen/dimen20"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen100"
        android:layout_marginBottom="@dimen/dimen20"
        >
        <ImageView
            android:layout_width="@dimen/dimen100"
            android:layout_height="@dimen/dimen100"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_logo"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_thanks"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/rubik400"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pembuat_api_1"
        android:textSize="15sp"
        android:fontFamily="@font/rubik400"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_1"
        android:textSize="15sp"
        android:fontFamily="@font/rubik400"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_marginTop="@dimen/dimen50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/rubik400"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verison_apk"
        android:gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/rubik400"
        android:textColor="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_close"
        android:background="@drawable/border_button_close"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik400"
        android:id="@+id/button_close"
        android:layout_marginTop="@dimen/dimen20"
        />

</LinearLayout>